# sport_prediction

./: .env.example  .env.production.example  .env.staging.example  .gitignore  API_IMPLEMENTATION.md  APP_REVIEW.md  APP_REVIEW_AND_NEXT_STEPS.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DESIGN.md  BUILD_STATUS.md  DEPLOYMENT.md  DEVELOPER_QUICKSTART.md  DEV_CREDENTIALS.md  FEATURE_REVIEW.md  FINAL_STATUS.md  ML_PIPELINE.md  Makefile  PROJECT_STRUCTURE.md  PredictIQ_ARCHITECTURE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  WHAT_IS_NEXT.md  WORKING_AND_NOT.md  app.json  coverage.xml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini  requirements.txt  tsconfig.json  turbo.json
.claude/: settings.local.json
.github/: dependabot.yml
.husky/: pre-commit
apps/: README.md
archive/: README.md
archive/services/predictions/: Cargo.toml  Dockerfile
archive/services/predictions/src/: main.rs
archive/services/predictions/src/handlers/: health.rs  predictions.rs
archive/services/predictions/src/models/: prediction.rs
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  coverage.xml  pytest-fast.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh  seed.sh  train_model.py  walk_forward_backtest.py
deploy/: crontab.example  nginx-api-ws-snippet.conf  nginx-deny-internal-snippet.conf  nginx-octobetiq-api.conf.example  nginx-octobetiq-payment-snippet.conf  nginx-octobetiq-privacy-snippet.conf  (+6 more)
docs/: ACCESSIBILITY_QA.md  (+48 more)
(+672 files in other folders)
