[package]
name = "predictions-service"
version = "0.1.0"
edition = "2021"
authors = ["SportOracle Team"]
description = "High-performance predictions service for SportOracle"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# HTTP client (for ML model calls)
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Metrics
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
